<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_app_nrc"
            android:contentDescription="@string/home_logo_desc" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/regBtn"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/light_blue_900"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/authBtn"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/light_blue_600"
            android:text="@string/authenticate"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>