<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFaceFragment">

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/default_name"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/camField"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topText"
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:keepScreenOn="true" />

        <com.example.nextface_android.GraphicOverlay
            android:id="@+id/overlayContainer"
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:layerType="software" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/default_description"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camField" />

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layoutMode="opticalBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/home"
            android:textSize="30sp"
            android:visibility="visible" />

        <Space
            android:id="@+id/space30"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/voiceRegBtn"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/voice_register"
            android:textSize="30sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
