<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterVoiceFragment">

    <LinearLayout
        android:id="@+id/staffLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/staffAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/avatar_of_staff"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_app_nrc" />

        <TextView
            android:id="@+id/staffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="0dp"
            android:text="@string/default_name"
            android:textAlignment="textStart"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/staffAvatar" />

    </LinearLayout>

    <TextView
        android:id="@+id/voice_desc"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/voice_desc"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staffLayout" />

    <LinearLayout
        android:id="@+id/dialogueLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voice_desc">

        <TextView
            android:id="@+id/dialogue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_reg_dialogue"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            android:textStyle="italic" />

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/timeRecord"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:text="20s"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#FF0000"-->
<!--        android:textSize="16sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Chronometer
        android:id="@+id/timeRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layoutMode="opticalBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/startRecordBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_start_record"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/stopRecordBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_stop_record"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
